Updated style sheet to fix overflowing event info on calendar page

--- a/style.css
+++ b/style.css
@@ -1129,6 +1129,10 @@ button:hover{
         padding: 0;
         border-radius: 8px 8px 0 0;
     }
+
+    .event_right{
+        max-width: 70vw;
+    }
     
     .event .event_left .event_date .event_day,
     .event .event_left .event_data .event_month{
